--- a/develop/blocks/monitoring-data/monitoring-data.scss
+++ b/develop/blocks/monitoring-data/monitoring-data.scss
@@ -261,6 +261,44 @@
             top: 40px;
         }
     }
+
+    &__funds-row {
+        display: flex;
+        flex-flow: row wrap;
+        padding-bottom: 8px;
+        padding-top: 8px;
+        margin: 0 -16px 8px;
+
+        color: $text-color;
+        text-decoration: none;
+
+        border-bottom: 1px solid rgba(#919191, 0.2);
+    }
+
+    &__funds-cell {
+        padding: 8px 16px;
+        flex: 0 0 auto;
+
+        font-size: 14px;
+        font-weight: 400;
+
+        &:first-child {
+            width: 35%;
+            max-width: 170px;
+            font-weight: 600;
+        }
+
+        &:empty {
+            display: none;
+        }
+
+        &--long {
+            width: 65%;
+        }
+
+        &:last-child {
+        }
+    }
 }
 
 @media #{$tablet} {
@@ -337,6 +375,18 @@
         &__estimates {
             padding-right: 24px;
         }
+
+        &__funds-row {
+            margin: 0;
+        }
+
+        &__funds-cell {
+            font-size: 16px;
+
+            &:first-child {
+                max-width: 190px;
+            }
+        }
     }
 }
 
@@ -393,6 +443,39 @@
         &__finances {
             padding-left: 0px;
         }
+
+        &__funds-table {
+            display: table;
+            width: 100%;
+            table-layout: fixed;
+        }
+
+        &__funds-row {
+            margin: 0;
+            display: table-row;
+        }
+
+        &__funds-cell {
+            display: table-cell;
+            padding: 24px 16px;
+
+            font-size: 18px;
+
+            border-bottom: 1px solid rgba(#919191, 0.2);
+
+            &:first-child {
+                width: auto;
+                max-width: none;
+            }
+
+            &--long {
+                width: 40%;
+            }
+
+            &:empty {
+                display: table-cell;
+            }
+        }
     }
 }
 
@@ -444,6 +527,28 @@
 
             .object-estimates__title .title.medium {
                 font-size: 34px;
+            }
+        }
+
+        &__funds-row {
+            &:hover {
+                .monitoring-data__funds-cell {
+                    background-color: #fff6d4;
+                }
+            }
+        }
+
+        &__funds-cell {
+            padding: 36px 24px;
+
+            transition: background-color 300ms ease;
+
+            &:first-child {
+                padding-left: 36px;
+            }
+
+            &:last-child {
+                padding-right: 36px;
             }
         }
     }
