--- a/develop/jade/account-page-1.pug
+++ b/develop/jade/account-page-1.pug
@@ -7,7 +7,7 @@ doctype html
 html(lang='ru')
     +doc-header
     body
-        +main-header
+        +main-header(true)
         +account-layout
             +account-wizard
         +account-settings-modal
