--- a/develop/blocks/object-finances/object-finances.scss
+++ b/develop/blocks/object-finances/object-finances.scss
@@ -12,6 +12,7 @@
     &__table-wrapper {
         position: relative;
         z-index: 14;
+        margin-bottom: -24px;
     }
 
     &__table {
@@ -107,6 +108,7 @@
         position: relative;
         z-index: 14;
         display: flex;
+        padding-top: 24px;
         justify-content: flex-end;
     }
 
@@ -261,6 +263,8 @@
         }
 
         &__table-wrapper {
+            margin-bottom: 0;
+
             &::after {
                 content: '';
                 position: absolute;
@@ -312,10 +316,6 @@
                 font-size: 14px;
                 font-weight: 600;
             }
-        }
-
-        &__controls {
-            padding-top: 16px;
         }
 
         &__line-chart {
