fixed: object-estimates

--- a/develop/blocks/object-estimates/object-estimates.scss
+++ b/develop/blocks/object-estimates/object-estimates.scss
@@ -189,6 +189,7 @@
         &__row {
             padding-left: 20px;
             margin-bottom: 32px;
+            min-height: 60px;
         }
 
         &__label {
