fixed: object-finances highlight bug

--- a/develop/blocks/monitoring-data/monitoring-data.scss
+++ b/develop/blocks/monitoring-data/monitoring-data.scss
@@ -516,6 +516,7 @@
         &__finances,
         &__estimates {
             padding-right: 1px;
+            padding-left: 1px;
 
             .object-finances__title {
                 margin-bottom: 50px;
