--- a/develop/blocks/object-description/object-description.scss
+++ b/develop/blocks/object-description/object-description.scss
@@ -126,6 +126,10 @@
             width: 60%;
             padding-right: 45px;
             margin-bottom: 0;
+
+            &.full {
+                width: 100%;
+            }
         }
     }
 }
