--- a/develop/blocks/object-card/object-card.scss
+++ b/develop/blocks/object-card/object-card.scss
@@ -206,6 +206,7 @@
                 display: inline;
                 position: relative;
                 font-weight: 500;
+                text-decoration: none;
             }
 
             img {
