best-objects update

--- a/develop/blocks/best-object-card/best-object-card.pug
+++ b/develop/blocks/best-object-card/best-object-card.pug
@@ -5,3 +5,4 @@ mixin best-object-card(id, name, rate)
         +e.name= name
         +e.A.link(href='#') Подробнее про объект
         +e.rate= rate
+        +e.class AAA
